ubiquity (2.11.4) UNRELEASED; urgency=low

  [ Colin Watson ]
  * Force the locale to en_US.UTF-8 for the timezone tests.

  [ Dmitrijs Ledkovs ]
  * Remove migration-assistant's UI definitions.

 -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Mon, 28 May 2012 15:35:55 +0100

ubiquity (2.11.3) quantal; urgency=low

  * Automatic update of included source packages: flash-kernel 2.28ubuntu45.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 28 May 2012 09:44:35 +0100

ubiquity (2.11.2) quantal; urgency=low

  [ Colin Watson ]
  * If ubiquity is started up in a non-UTF-8 locale, force it into C.UTF-8
    and fail immediately if that's unavailable (LP: #1003851).
  * KDE fails to round-trip strings containing U+FEFF ZERO WIDTH NO-BREAK
    SPACE, such as the translations of a few language names.  Strip these
    from language name translations.
  * Install debconf-set from debian-installer-utils, useful for preseeding.

  [ Evan Dandrea ]
  * Remove migration-assistant following foundations-q-testing-
    migration-assistant. Thanks Dmitrijs Ledkovs!
  * Automatic update of included source packages: base-installer
    1.122ubuntu8, flash-kernel 2.28ubuntu43.

 -- Evan Dandrea <ev@ubuntu.com>  Fri, 25 May 2012 15:47:47 +0100

ubiquity (2.11.1) quantal; urgency=low

  * Fix handling of pipes to update-apt-cache.
  * Sync up scripts/clock-setup-apply with changes in clock-setup 0.110.
  * Only decode bytes read from debconf once we have a complete line
    (LP: #1001542).
  * Remove a couple of unused attributes.

 -- Colin Watson <cjwatson@ubuntu.com>  Mon, 21 May 2012 17:16:32 +0100

ubiquity (2.11.0) quantal; urgency=low

  [ Colin Watson ]
  * Install oem-config-slideshow-ubuntu in a separate pass from
    oem-config-$frontend and ubiquity-frontend-$frontend, since it may be
    missing from images; and only do this for the GTK frontend in any case,
    since other frontends don't currently use the slideshow (LP: #987050).
  * Re-enable alpha warning for quantal.